# basic-http-client

./: CMakeLists.txt  HttpClient.cpp  HttpClient.h  basic_http_client.h  http_client.cpp  http_client.h  main.cpp
src/client/: HttpClient.cpp  HttpClient.h
src/client/https-client/: HttpsClient.cpp  HttpsClient.h
src/client/interface-io/: IO_Functions.cpp  IO_Functions.h  Interface_IO.h
src/client/request_header/: Request_Header.cpp  Request_Header.h
src/cmdline/: Cmdline.cpp  Cmdline.h
